对于前面添加新的接口,对于超卖的问题再次进行了解决
